[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy_panorbit_camera = "0.23.0"
bytemuck = "1.21.0"
rand = "0.8" # Check for the latest version
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

